# R-Type-Catch-up

./: Dockerfile  install_dependencies.sh
.github/workflows/: doxygen-pages.yml
Client/include/: Client.hpp
Client/src/: Client.cpp
Network/: CMakeLists.txt
Network/include/: DataPacking.hpp  Packet.hpp  PacketHandler.hpp  PacketType.hpp
Network/src/: PacketHandler.cpp
R-Type/: CMakeLists.txt
R-Type/include/: AGame.hpp  EngineFrame.hpp  GameState.hpp  IGame.hpp  Pong.hpp
R-Type/include/Entity/: Boss.hpp  Bullet.hpp  Enemy.hpp  GeneralEntity.hpp  Player.hpp
R-Type/src/: AGame.cpp  GameState.cpp  Pong.cpp
R-Type/src/Entity/: Boss.cpp  Bullet.cpp  Enemy.cpp  GeneralEntity.cpp  Player.cpp
Server/: main.cpp
Server/include/: ClientRegister.hpp  Server.hpp
Server/src/: Server.cpp
